[feat] Implemented Data Splits

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -244,7 +244,9 @@
     "\n",
     "-***CARS***: the car class was the more common from the three clases, with over 35000 object founds for this class.   \n",
     "-***PEDESTRIANS***: the pedestrina class was the second most common, appearing over 10000 times in the samples.   \n",
-    "-***Bycicles***: the bycicle class was the l"
+    "-***Bycicles***: the bycicle class was the least common from all the three classes.\n",
+    "\n",
+    "In all the images appears one of the classes."
    ]
   },
   {
